--- a/product-preview-card-component-main/styles.css
+++ b/product-preview-card-component-main/styles.css
@@ -25,7 +25,7 @@ body{
 
 img{
   max-width: 100%;
-  border-radius: 1rem 0 0 1rem;
+  /* border-radius: 1rem 0 0 1rem; */
 
 }
 
@@ -57,7 +57,7 @@ img{
 }
 
 .text-container .overview{
-  
+  margin-bottom: 20px;
   font-weight: lighter;
   font-size: 1rem;
   color: var(--dg-blue);
@@ -111,4 +111,45 @@ button:hover,
 button:active{
   background-color: hsl(158, 40%, 18%);
   cursor: pointer;
+}
+
+@media (max-width: 628px){
+  .grid-container{
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(1fr)
+  }
+
+  .product__image{
+    max-height: 400px;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .product__name{
+    font-size: 2rem;
+    margin-bottom: 15px;
+  }
+
+  .text-container .product__description{
+    font-size: 0.9rem;
+    margin-bottom: 20px;
+  }
+
+  .price{
+    margin-bottom: 16px;
+  }
+
+  .discounted__price{
+    font-size: 2rem;
+  }
+
+  .original__price{
+    font-size: 0.8rem;
+  }
+
+  button{
+    font-size: 1.2rem;
+
+  }
+
 }
