Added mobile design states

--- a/3-column-preview-card-component-main/styles.css
+++ b/3-column-preview-card-component-main/styles.css
@@ -99,3 +99,12 @@ body{
   color: var(--very-light-gray);
   background-color: transparent;
 }
+
+
+@media (max-width: 768px){
+  .container{
+    width: 90%;
+    margin: 60px 0;
+    grid-template-columns: 1fr;
+  }
+}
