--- a/social-proof-section-master/styles.css
+++ b/social-proof-section-master/styles.css
@@ -108,6 +108,63 @@ body{
   line-height: 1.5;
 }
 
-/* @media (min-width: 768px){
+@media (min-width: 768px){
 
-} */
+  .container{
+    max-width: 1200px;
+    
+  }
+
+  .upper-container{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .description{
+    width: 40%;
+    text-align: left;
+
+  }
+
+  .description__header{
+    padding: 0;
+    font-size: 3.5rem;
+    margin-bottom: 20px;
+  }
+
+  .website__review{
+    padding: 20px;
+    margin: 20px 0;
+  }
+
+  .first-rating{
+    margin-right: 100px;
+    margin-left: -100px;
+  }
+  .second-rating{
+    margin-right: 50px;
+    margin-left: -50px;
+  }
+
+  .star__rating{
+    display: inline;
+    margin-right: 24px;
+  }
+
+  .user__reviews{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 30px;
+  }
+
+  .second-user{
+    margin-top: 40px;
+    margin-bottom: -0px;
+  }
+
+  .third-user{
+    margin-top: 60px;
+    margin-bottom: -20px;
+  }
+
+}
