--- a/social-proof-section-master/styles.css
+++ b/social-proof-section-master/styles.css
@@ -151,6 +151,11 @@ body{
     margin-right: 24px;
   }
 
+  .user{
+    width: 380px;
+    height: 300px;
+  }
+
   .user__reviews{
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -158,13 +163,13 @@ body{
   }
 
   .second-user{
-    margin-top: 40px;
-    margin-bottom: -0px;
+    margin-top: 45px;
+    /* margin-bottom: -0px; */
   }
 
   .third-user{
-    margin-top: 60px;
-    margin-bottom: -20px;
+    margin-top: 75px;
+    /* margin-bottom: -20px; */
   }
 
 }
