--- a/single-price-grid-component-master/styles.css
+++ b/single-price-grid-component-master/styles.css
@@ -34,7 +34,7 @@ body{
   display: grid;
   grid-template-columns: 1fr;
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
+  border-radius: 8px;
   overflow: hidden;
   
 }
@@ -56,7 +56,7 @@ body{
 
 .community-header h4{
   color: var(--bright-yellow);
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   margin-bottom: 20px;
 }
 
@@ -88,7 +88,7 @@ body{
 }
 
 .monthly-subscription p{
-  margin-bottom: 16px;
+  margin-bottom: 24px;
   font-size: 1.1rem;
 }
 
@@ -117,3 +117,22 @@ body{
   font-size: 0.95rem;
 }
 
+@media (min-width: 768px){
+  .container{
+    grid-template-columns: repeat(2,1fr);
+    max-width: 800px;
+    margin-top: 160px;
+  }
+
+  .sub-containers{
+    padding: 50px;
+  }
+
+  .community-header{
+    grid-column: 1/ span 2;
+  }
+
+  .community-header p{
+    font-size: 1.1rem;
+  }
+}
