--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -59,7 +59,7 @@ body{
 
 .card{
   padding: 1.5rem;
-  box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
+  box-shadow: 2px 4px 10px rgba(0,0,0,0.2);
   margin-bottom: 1.5rem;
   border-radius: 0.5rem;
   border-top: 5px solid #000;
@@ -69,6 +69,7 @@ body{
   font-weight: 700;
   font-size: 1.5rem;
   color: var(--very-dark-blue);
+  margin-bottom: 1rem;
 }
 
 .card p{
@@ -76,7 +77,7 @@ body{
 }
 
 .card img{
-  margin-top: 1.8rem;
+  margin-top: 2rem;
   display: block;
   margin-left: auto;
 }
@@ -95,4 +96,42 @@ body{
 
 .blue{
   border-color: var(--blue);
+}
+
+
+@media (min-width: 768px){
+  .container{
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3,1fr);
+    gap: 1.5rem;
+  }
+
+  .heading{
+    grid-column: 1/4;
+    align-items: center;
+  }
+
+
+  .red{
+    grid-row: 2/3;
+  }
+
+  .blue{
+    grid-row: 3/4;
+    grid-column: 2/3;
+  }
+
+  .cyan{
+    grid-row: 2/4;
+    align-self: center;
+  }
+  
+  .orange{
+    grid-row: 2/4;
+    grid-column: 3/4;
+    align-self: center;
+  }
+
 }
