--- a/ping-coming-soon-page-master/styles.css
+++ b/ping-coming-soon-page-master/styles.css
@@ -7,3 +7,126 @@
   --gray : hsl(0, 0%, 59%);
   --very-dark-blue : hsl(209, 33%, 12%);
 }
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+li{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+}
+
+img{
+  width: 100%;
+}
+
+body{
+  font-family: 'Libre Franklin', sans-serif;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3rem 0;
+}
+
+.container{
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.company-icon{
+  max-width: 100px;
+  margin: 60px 0;
+}
+
+.container h2{
+  color: var(--gray);
+  font-weight: 300;
+  margin-bottom: 20px;
+}
+
+.highlight{
+  color: var(--very-dark-blue);
+  font-weight: 600;
+}
+
+.subscribe{
+  font-size: 1rem;
+  margin-bottom: 2.2rem;
+}
+
+form {
+  width: 80%;
+  margin-bottom: 5rem;
+}
+
+.form-control{
+  position: relative;
+}
+
+.form-control input{
+  display: block;
+  width: 100%;
+  border: 1px solid var(--blue-primary);
+  padding: 0.8rem 2rem;
+  font-size: 0.9rem;
+  border-radius: 1.5em;
+  margin-bottom: 1rem;
+}
+
+.form-control input:focus{
+  outline: 0;
+}
+
+::placeholder{
+  color: var(--gray);
+}
+
+.form-control small{
+  display: block;
+  margin-top: 0.8rem;
+  margin-bottom: 1.6rem;
+  text-align: center;
+  display: none;
+}
+
+.notify{
+  width: 100%;
+  background-color: var(--blue-primary);
+  color: #fff;
+  font-weight: 600;
+  font-size: 0.9rem;
+  border: 1px solid var(--blue-primary);
+  padding: 0.8rem 2rem;
+  border-radius: 1.5rem;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+.social-icons{
+  display: flex;
+  justify-content: center;
+  margin-top: 8rem;
+}
+
+.social-icons a{
+  color: var(--blue-primary);
+  display: block;
+  margin: 0.5rem;
+  padding: 0.8rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+
+.copyright{
+  color: var(--gray);
+  font-size: 0.7rem;
+  margin-top: 1rem;
+}
