--- a/ping-coming-soon-page-master/styles.css
+++ b/ping-coming-soon-page-master/styles.css
@@ -32,10 +32,11 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 3rem 0;
+  /* overflow: hidden; */
 }
 
 .container{
+  margin: 30px auto;
   width: 90%;
   display: flex;
   flex-direction: column;
@@ -44,7 +45,8 @@ body{
 
 .company-icon{
   max-width: 100px;
-  margin: 60px 0;
+  /* margin: 60px 0; */
+  margin-bottom: 40px;
 }
 
 .container h2{
@@ -66,6 +68,9 @@ body{
 form {
   width: 80%;
   margin-bottom: 5rem;
+  display: grid;
+  grid-template-rows: 40% 20% 40%;
+  row-gap: 20px;
 }
 
 .form-control{
@@ -79,48 +84,62 @@ form {
   padding: 0.8rem 2rem;
   font-size: 0.9rem;
   border-radius: 1.5em;
-  margin-bottom: 1rem;
+  
+  grid-row: 1/2;
 }
 
 .form-control input:focus{
   outline: 0;
 }
 
+.form-control.error input{
+  border-color: var(--light-red-sc);
+}
+
 ::placeholder{
   color: var(--gray);
 }
 
-.form-control small{
-  display: block;
-  margin-top: 0.8rem;
-  margin-bottom: 1.6rem;
+.error-state{
+  font-size: 0.8rem;
+  font-weight: 300;
+  color: var(--light-red-sc);
   text-align: center;
-  display: none;
+  display: block;
+  grid-row: 2/3;
 }
 
 .notify{
   width: 100%;
   background-color: var(--blue-primary);
   color: #fff;
-  font-weight: 600;
-  font-size: 0.9rem;
+  font-weight: 700;
+  font-size: 0.8rem;
   border: 1px solid var(--blue-primary);
   padding: 0.8rem 2rem;
   border-radius: 1.5rem;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
 }
 
+.main-img {
+  width: 100%;
+}
+
 .social-icons{
   display: flex;
   justify-content: center;
-  margin-top: 8rem;
+  margin-top: 6rem;
 }
 
 .social-icons a{
+  width: 50px;
+  height: 50px;
+  font-size: 1rem;
+  text-align: center;
   color: var(--blue-primary);
   display: block;
   margin: 0.5rem;
-  padding: 0.8rem;
+  padding: 1rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 }
@@ -128,5 +147,48 @@ form {
 .copyright{
   color: var(--gray);
   font-size: 0.7rem;
-  margin-top: 1rem;
+  margin-top: 2rem;
+}
+
+@media (min-width:768px){
+  .container{
+    max-width: 1000px;
+  }
+
+  .main-img{
+    width: 70%;
+  }
+
+  .error-state{
+    text-align: left;
+    margin-left: 1rem;
+  }
+
+  .form-control input{
+    display: block;
+    margin-bottom: 0;
+  }
+
+  form{
+    grid-template-rows: 90% ,10%;
+    grid-template-columns: 75% 25%;
+    column-gap: 20px;
+    row-gap: 5px;
+  }
+
+  .notify:is(:hover,:active){
+    background-color: hsla(223, 87%, 63%,0.8);
+    cursor: pointer;
+  }
+
+  .social-icons{
+    margin-top: 2.2rem;
+  }
+
+  .social-icons a:is(:hover,:active){
+    color: #fff;
+    background-color: var(--blue-primary);
+  }
+
+  
 }
