--- a/profile-card-component-main/styles.css
+++ b/profile-card-component-main/styles.css
@@ -19,6 +19,7 @@ body{
   font-size: 18px;
   background-color: var(--dark-cyan);
   display: flex;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
