--- a/stats-preview-card-component-main/styles.css
+++ b/stats-preview-card-component-main/styles.css
@@ -106,20 +106,23 @@ body{
   letter-spacing: 1px;
 }
 
-@media (min-width: 1200px){
+@media (min-width: 960px){
   .container{
+    min-width: 920px;
     display: flex;
     flex-direction: row-reverse;
-    min-width: 1100px;
+    width: 80%;
     max-width: 1200px;
     width: 60%;
   }
   .image-container{
     width: 100%;
+    
   }
 
   .image-container img{
     width: 100%;
+    min-height: 100%;
     display: block;
   }
 
