--- a/ping-coming-soon-page-master/styles.css
+++ b/ping-coming-soon-page-master/styles.css
@@ -36,7 +36,7 @@ body{
 
 .container{
   width: 80%;
-  max-width: 1100px;
+  max-width: 1200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -175,5 +175,54 @@ footer{
 }
 
 .attribution a:hover{
-  color:hsla(223, 87%, 63%,0.7);
+  color:blueviolet;
+}
+
+
+@media (min-width: 760px){
+  .main-title{
+    font-size: 2.5rem;
+  }
+  .sub{
+    font-size: 1.1rem;
+  }
+  form{
+    width: 60%;
+    display: flex;
+    align-items: flex-start;
+  }
+  label{
+    width: 75%;
+  }
+
+  small{
+    bottom: -20px;
+    margin-left: 20px;
+    text-align: start;
+  }
+
+  .form input{
+    width: 100%;
+  }
+
+  #email{
+    margin-bottom: 0;
+  }
+
+  .btn-submit{
+    width: 25%;
+    margin: 0 0 0 1rem;
+    padding: 1rem 0;
+  }
+
+  .main-img-container{
+    width: 60%;
+    margin-bottom: 3rem;
+  }
+
+  .social-icon{
+    width: 40px;
+    height: 40px;
+  }
+
 }
