--- a/3-column-preview-card-component-main/styles.css
+++ b/3-column-preview-card-component-main/styles.css
@@ -109,6 +109,15 @@ footer{
   bottom: 0;
 }
 
+footer a{
+  color: royalblue;
+  text-decoration: none;
+}
+
+footer a:hover{
+  color: purple;
+}
+
 footer .container{
   margin: 0 auto;
 }
@@ -122,5 +131,11 @@ footer .container{
     width: 90%;
     margin: 60px 0;
     grid-template-columns: 1fr;
+  }
+
+  footer{
+    width: 100%;
+    position: relative;
+
   }
 }
