--- a/fylo-landing-page-with-two-column-layout-master/styles.css
+++ b/fylo-landing-page-with-two-column-layout-master/styles.css
@@ -101,6 +101,10 @@ form input, form button{
   width: 100%;
 }
 
+form input:focus{
+  outline: none;
+}
+
 #email{
   padding: 0.8rem 1rem;
   font-size: 1rem;
@@ -118,10 +122,15 @@ form input, form button{
   font-weight: 700;
   font-size: 1.1rem;
   background-color: var(--bright-blue);
-  border: 1px solid var(--bright-blue);
+  border: none;
   border-radius: 4px;
   padding: 0.8rem 0;
   box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+}
+
+#btn-submit:hover{
+  background-color: hsla(224, 93%, 58%,0.5);
+  cursor: pointer;
 }
 
 .outer-bottom-container{
@@ -188,6 +197,16 @@ form input, form button{
   border-bottom: 1px solid var(--moderate-cyan);
   margin-bottom: 2rem;
 }
+
+#faq:hover{
+  color: hsla(170, 45%, 43%,0.6);
+  border-color: hsla(170, 45%, 43%,0.6);
+}
+#faq:hover .arrow-icon{
+  filter:opacity(60%);
+}
+
+
 
 .user-card{
   width: 95%;
@@ -307,6 +326,10 @@ form input, form button{
   font-size: 1.1em;
 }
 
+.self-links:hover{
+  color: var(--desat-blue);
+}
+
 .social-icons{
   display: flex;
   justify-content: center;
@@ -320,8 +343,13 @@ form input, form button{
   margin: 0 0.4rem;
   width: 40px;
   height: 40px;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   border-radius: 50%;
+}
+
+.social-icon:hover{
+  border-color: var(--bright-blue);
+  color: var(--bright-blue);
 }
 
 /* Attriibution */
