--- a/qr-code-component-main/styles.css
+++ b/qr-code-component-main/styles.css
@@ -22,19 +22,21 @@ img{
 /* styles */
 
 body{
+  position: relative;
   font-size: 15px;
   font-family: 'Outfit', sans-serif;
   background-color: var(--light-gray);
-  min-height: 100vh;
+  min-height: 95vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .flex-container{
-  width: 80%;
+  width: 90%;
   background-color: #fff;
-  max-width: 375px;
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,14 +44,14 @@ body{
 }
 
 .flex-container img{
-  margin: 25px 0;
+  margin: 1rem 0 1rem;
   border-radius: 1rem;
   
 }
 
 .qr-description{
-  width: 90%;
-  margin-bottom: 40px;
+  padding: 1.5rem;
+  margin: 0 auto 2.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -57,8 +59,8 @@ body{
 }
 
 .qr-header{
-  margin-bottom: 20px;
-  
+  margin-bottom: 1.2rem;
+  font-size: 1.5rem;
   color: var(--dark-blue);
   text-align:center;
 }
@@ -66,18 +68,36 @@ body{
 .qr-text{
   text-align: center;
   color: var(--grayish-blue);
-  font-size: 0.9rem;
+  font-size: 1rem;
+}
+
+.footer-container{
+  font-size: 1rem;
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.footer-container a{
+  text-decoration: none;
+  color: rgb(0, 93, 214);
+}
+
+.footer-container a:hover{
+  color: var(--grayish-blue);
 }
 
 @media (min-width: 768px){
   .qr-description{
-    
-    margin-bottom: 60px;
+    width: 90%;
+    margin-bottom: 1rem;
   }
 
   .qr-header{
     font-size: 1.6rem;
-    margin-bottom: 30px;
+    margin-bottom: 1rem;
   }
 
   .qr-text{
