--- a/nft-preview-card-component-main/styles.css
+++ b/nft-preview-card-component-main/styles.css
@@ -61,7 +61,7 @@ body{
 }
 
 .img-container{
-  width: 90%;
+  width: 88%;
   margin: 20px 0;
   border-radius: 10px;
   overflow: hidden;
@@ -69,21 +69,22 @@ body{
 }
 
 .container{
-  max-width: 450px;
+  max-width: 400px;
   width: 90%;
   background-color: var(--card-bg);
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 15px;
+  margin-bottom: 5rem;
 }
 
 .product-description{
-  width: 90%;
+  width: 88%;
 }
 .product-description h2{
   color: #fff;
-  margin-bottom: 20px;
+  margin-bottom: 1.3rem;
 }
 
 .name-link:hover,
@@ -95,8 +96,9 @@ body{
 
 .product-description p{
   color: var(--soft-blue);
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 300;
+  line-height: 1.5;
 }
 
 .product-amt{
@@ -121,14 +123,17 @@ body{
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding: 20px;
+  padding: 1.25rem 0;
   width: inherit;
   font-size: 0.95rem;
+  word-spacing: 2px;
 }
 
 .creator img{
+  border: 1px solid #fff;
+  border-radius: 50%;
   max-width: 50px;
-  margin-right: 20px;
+  margin-right: 1rem;
 }
 
 .creator{
@@ -136,3 +141,15 @@ body{
 }
 
 
+/* Attribution */
+
+.attribution {
+  color: var(--soft-blue);
+}
+.attribution a{
+  color: #fff;
+}
+
+.attribution a:hover{
+  color: var(--cyan);
+}
