--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -18,34 +18,39 @@
   box-sizing: border-box;
 }
 
-body{
+html{
   font-family: 'Poppins', sans-serif;
   font-size: 15px;
+}
+
+body{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .container{
   text-align: left;
-  width: 80%;
-  margin: 60px 0;
+  width: 84%;
+  margin: 4rem 0;
 }
 
 .heading{
   text-align: center;
   color: var(--very-dark-blue);
+  margin-bottom: 3rem;
 }
 
 .describe{
   font-weight: 200;
-  font-size: 1.7rem;
+  font-size: 1.6rem;
 }
 
 
 .heading h2{
   font-weight: 700;
-  font-size: 1.7rem;
+  font-size: 1.6rem;
   margin-bottom: 1.8rem;
 }
 
@@ -67,13 +72,15 @@ body{
 
 .card h3{
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: var(--very-dark-blue);
   margin-bottom: 1rem;
 }
 
 .card p{
   color: var(--grayish-blue);
+  padding-right: 1.1rem;
+  font-size: 0.9rem;
 }
 
 .card img{
@@ -97,41 +104,86 @@ body{
 .blue{
   border-color: var(--blue);
 }
+/* Footer */
+footer{
+  width: 90%;
+  text-align: center;
+  font-size: 1.1rem;
+}
 
+footer a{
+  color: var(--red);
+  text-decoration: none;
+}
+
+footer a:hover{
+  color: var(--blue);
+}
 
 @media (min-width: 768px){
   .container{
     max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem 0 2rem;
+  }
+
+  .card-container{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(3,1fr);
-    gap: 1.5rem;
+    grid-template-rows: repeat(2,1fr);
+    column-gap: 1.8rem; 
+    row-gap: 1rem;
   }
 
   .heading{
-    grid-column: 1/4;
-    align-items: center;
+    margin-bottom: 5rem;
   }
 
+  .heading h2{
+    font-size: 2.5rem;
+  }
+
+  .describe{
+    font-size: 2.5rem;
+  }
+
+  .description-para{
+    font-size: 1.2rem;
+    width: 58%;
+    margin: auto;
+  }
+
+  .card h3{
+    font-size: 1.5rem;
+  } 
+  .card p{
+    font-size: 1rem;
+  }
+
+  .card img{
+    margin-bottom: 1rem;
+  }
 
   .red{
-    grid-row: 2/3;
+    grid-row: 1/2;
   }
 
   .blue{
-    grid-row: 3/4;
-    grid-column: 2/3;
+    grid-row: 1/3;
+    align-self: center;
   }
 
   .cyan{
-    grid-row: 2/4;
+    grid-row: 1/3;
     align-self: center;
   }
   
   .orange{
-    grid-row: 2/4;
-    grid-column: 3/4;
-    align-self: center;
+    grid-row: 2/3;
+    grid-column: 2/3;
+    
   }
 
 }
