--- a/single-price-grid-component-master/styles.css
+++ b/single-price-grid-component-master/styles.css
@@ -20,6 +20,7 @@ ul{
 }
 
 body{
+  margin: 4rem 0;
   line-height: 1.5;
   font-family: 'Karla', sans-serif;
   background-color: var(--light-gray);
@@ -31,13 +32,13 @@ body{
 }
 
 .container{
+  margin-bottom: 2rem;
   width: 86%;
   display: grid;
   grid-template-columns: 1fr;
-  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.1);
   border-radius: 0.4rem;
   overflow: hidden;
-  box-shadow: 0px 4px 10px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 12px 4px rgba(0, 0, 0, 0.2);
 }
 
 .sub-containers{
@@ -128,8 +129,8 @@ body{
 }
 
 .more-info li{
-  color: rgba(255, 255, 255, 0.75);
-  font-size: 0.95rem;
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 1rem;
 }
 
 /* Footer */
@@ -137,7 +138,7 @@ body{
 footer{
   margin-top: 2rem;
   text-align: center;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
 }
 
 footer a{
