--- a/testimonials-grid-section-main/styles.css
+++ b/testimonials-grid-section-main/styles.css
@@ -18,63 +18,79 @@
 
 img{
   border-radius: 50%;
-  margin-right: 20px;
-  border: 2px solid;
+  width: 100%;
+}
+
+a{
+  text-decoration: none;
+}
+
+html{
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 13px;
 }
 
 body{
-  font-family: 'Barlow Semi Condensed', sans-serif;
-  font-size: 13px;
   background-color: var(--light-grayish-blue);
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .container{
-  margin: 20px auto;
+  margin:  1.6rem auto;
   width: 90%;
 }
 
 
 .card{
   border-radius: 0.7rem;
-  padding: 3rem;
-  margin: 1.5rem;
-  box-shadow: 2px 2px 16px 0px rgba(0, 0, 0, 0.3);
+  padding: 2.4rem;
+  margin: 1.5rem auto;
 }
 
-.name{
-  font-size: 18px;
-}
 
 .profile-container{
   display: flex;
   align-items: center;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
+
+.img-container{
+  width: 3rem;
+  margin-right: 1rem;
+}
+
+.img-container img{
+  border: 2px solid;
+}
+
+.name{
+  font-size: 1.15rem;
+}
+
 
 .verified{
   display: block;
-  font-size: 14px;
+  font-size: 1rem;
 }
 
 .quote-bg{
   background: url(./images/bg-pattern-quotation.svg);
-  /* background-size: 35%; */
   background-repeat: no-repeat;
   background-position: top 0px right 25px;
   background-color: var(--moderate-vio);
 }
 
 .profile-highlight{
-  font-size: 1.6rem;
+  font-size: 1.75rem;
   margin-bottom: 20px;
 }
 
 .profile-review{
-  font-size: 1rem;
+  font-size: 1.15rem;
   line-height: 1.5;
 }
 
@@ -102,13 +118,13 @@ body{
 }
 
 .white{
-  background-color: var(--white);
+  background-color: #fff;
 }
 
 .purple .name ,
 .blackish-blue .name ,
 .grayish-blue .name{
-  color: var(--white);
+  color: #fff;
 }
 
 .purple .profile-highlight,
@@ -145,20 +161,39 @@ body{
   color: hsla(217, 19%, 35%, 0.7);
 }
 
+/* Footer */
+footer{
+  margin-top: 2rem;
+  font-size: 1.3rem;
+}
 
-@media (min-width: 768px){
+footer {
+  color: var(--very-dark-grayish-blue);
+}
+
+footer a{
+  color: var(--very-dark-blackish-blue);
+}
+
+footer a:hover{
+  color: #7541c8;
+}
+
+@media (min-width: 960px){
 
   .container{
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: repeat(2,1fr);
-    max-width: 1400px;
-    gap: 30px;
-    max-height: 800px;
+    max-width: 1100px;
+    gap: 2rem;
+    margin-bottom: 8rem;
+    /* max-height: 600px; */
   }
 
   .card{
     margin: 0;
+    box-shadow: 2px 2px 16px 0px rgba(0, 0, 0, 0.3);
   }
   .profile-highlight{
     font-size: 1.4rem;
